Ensure that Regular Filing doesn’t wrap as well

--- a/app/stylesheets/design/_public_inspection.scss
+++ b/app/stylesheets/design/_public_inspection.scss
@@ -15,8 +15,8 @@
   padding-right: 30px;
   }
 #entries #content_area.public_inspection {
-  width:670px;
-  padding-right: 30px;
+  width:680px;
+  padding-right: 20px;
   }
 
 
@@ -80,7 +80,7 @@
   display: block;
   }
 #entries dl div.column.dates {
-  width: 225px;
+  width: 230px;
   }
 #entries dl dt > div.details .column.file_info {
   width: 205px;
